# bunnyland-rl

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.server  Dockerfile.web  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/admin/: rl-admin.md
docs/player/: rl-controllers.md
scripts/: check  junit-summary  test-server  test-web
server/: README.md  pyproject.toml
server/src/bunnyland_rl/: __init__.py  agent.py  api.py  components.py  encode.py  lenses.py  plugin.py  policy.py  runtime.py  training.py  wandb_tracking.py
server/tests/: conftest.py  test_plugin.py
web/: admin.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: admin.ts  style.css
web/test/: render.test.mjs
