[project]
name = "bunnyland-rl"
version = "0.1.0"
description = "Out-of-tree Bunnyland reinforcement-learning controller and admin dashboard plugin."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "bunnyland>=1.0.0rc2,<2",
    "numpy>=2.0",
    "pydantic>=2.0",
    "relics-ecs>=0.1.1,<0.2",
    "safetensors>=0.4",
    "torch>=2.3",
]

[project.optional-dependencies]
tracking = [
    "wandb>=0.18",
]

[project.entry-points."bunnyland.plugins"]
"bunnyland.rl" = "bunnyland_rl.plugin:bunnyland_plugins"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bunnyland_rl"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
